# PaperScout

./: .env.example  .gitignore  COMMIT_CONVENTION.txt  LICENSE  pyproject.toml  requirements.txt
.paperscout/: cache.db
paperscout/: agent.py  cache.py  cli.py  prompts.py  report.py  venues.py
paperscout/data/: schema.sql  top_venues.json
paperscout/prompts/: system.md
paperscout/skills/report/: SKILL.md
paperscout/skills/report/resources/: layout_a.md  layout_b.md
paperscout/skills/search_strategy/: SKILL.md
paperscout/skills/search_strategy/resources/: examples.md
paperscout/tools/: __init__.py  arxiv.py  skill_loader.py
tests/: test_arxiv_cache.py  test_cache.py  test_venues.py
